# Aero

./: .gitattributes  .gitignore  Aero prd.txt  Aero-Implementation-Plan.md  Aero-PRD-v0.2.md  Aero-v0.3-Open-Aero-Plan.md  README.md  pyproject.toml
docs/: AI4BHARAT_SETUP.md  BODY_SETUP.md  CLOUD_BRAIN_SETUP.md  CONTROL_APP_SETUP.md  EYES_SETUP.md  HANDOFF.md  KOKORO_SETUP.md  LITTLE_HANDS.md  MOONSHINE_SETUP.md  OPEN_BRAIN_SETUP.md  PLAY_SETUP.md  PRESENCE_SETUP.md  PROACTIVITY_SETUP.md  REALTIME_SETUP.md  SVARA_SETUP.md  VOICE_MARKETPLACE.md
spikes/: S10_VERDICT.md  S11_S12_NOTES.md  S1_VERDICT.md  S2_VERDICT.md  S3_VERDICT.md  S5_VERDICT.md  S8_NOTES.md  m2_memory_demo.py  s1_e4b_probe.py  s2_embedding_probe.py  s3_stt_probe.py
spikes/s3_testset/: README.md  manifest.tsv
src/aero/: __init__.py  agent.py  cli.py  config.py  daemon.py  effort.py  settings.py  working_set.py
src/aero/body/: __init__.py  face.py  hardware.py  host.py  robot.py
src/aero/cognition/: __init__.py  account.py  cloud_backend.py  discovery.py  embeddings.py  keys.py  ollama_backend.py  providers.py  registry.py  router.py  service.py
src/aero/control/: __init__.py  ipc.py  service.py
src/aero/eval/: __init__.py  wer.py
src/aero/hands/: __init__.py  consent.py  executor.py  journal.py  mcp_bridge.py  registry.py  skills.py  tool.py
src/aero/memory/: __init__.py  consolidation.py  models.py  retrieval.py  store.py
src/aero/perception/: __init__.py  cloud_stt.py  indic_stt.py  moonshine_stt.py  ocr.py  stt.py  tier0.py  vision.py  vision_router.py
src/aero/play/: __init__.py  connector.py  fusion.py  minecraft.py  spectator.py
src/aero/presence/: __init__.py  ambient.py  driver.py  emotion.py  rig.py  state.py  state_machine.py
src/aero/proactive/: __init__.py  gate.py  generator.py  impulse.py  loop.py  relationship.py  selfmem.py  threads.py  threshold.py
src/aero/prompts/: __init__.py  persona.py  proactive.py  reconcile.py  tagging.py
src/aero/vault/: __init__.py  backup.py  connection.py  repository.py  schema.py
src/aero/voice/: __init__.py  catalog.py  cloud_tts.py  fallback.py  kokoro_tts.py  lipsync.py  loop.py  mic.py  mic_stream.py  parler_tts.py  realtime.py  speech_intent.py  svara_tts.py  tts.py  vad.py
tests/: conftest.py  test_body_face_robot.py  test_body_hardware.py  test_body_host.py  test_brain_cli.py  test_brain_discovery_login.py  test_brain_keys.py  test_brain_login_flows.py  test_brain_providers.py  test_brain_registry.py  test_brain_router.py  test_brain_vast_catalog.py  test_cloud_brain.py  test_cloud_voice.py  test_cognition.py  test_control_body.py  test_control_brain_connect.py  test_control_eyes.py  test_control_hands.py  test_control_ipc.py  test_control_play.py  test_control_service.py  test_control_voice_catalog.py  test_daemon.py  test_effort.py  test_hands_consent.py  test_hands_executor.py  test_hands_journal.py  test_hands_tools.py  test_indic_backends.py  test_kokoro.py  test_memory.py  test_moonshine.py  test_perception.py  test_persona_permissions.py  test_play_connector.py  test_play_fusion.py  test_play_minecraft.py  test_presence_ambient.py  test_presence_driver.py  (+21 more)
ui/control-app/: README.md  package.json
ui/control-app/src/: app.js  index.html  styles.css
ui/control-app/src-tauri/: Cargo.toml  tauri.conf.json
ui/control-app/src-tauri/src/: lib.rs  main.rs
