[package]
name = "aero-control"
version = "0.1.0"
description = "Aero Control App — configure your companion (Pillar 2)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aero_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
